add png,file loaders,add custom components,

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,10 @@
 .app.dark {
     --bg-color:rgb(29, 28, 28);
+    --inverted-bg-color:rgb(202, 197, 197);
 
     --primary-color: rgb(163, 162, 162);
     --secondary-color: white;
+
+    --inverted-primary-color: rgb(110, 40, 40);
+    --inverted-secondary-color: rgb(211, 210, 210);
 }
