--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -8,8 +8,10 @@
 
     --font-size-l:24px;
     --font-line-l:32px;
-    --font-l:var(--font-size-l)/var(--font-line-l) var(--font-family)
+    --font-l:var(--font-size-l)/var(--font-line-l) var(--font-family);
 
     //Размеры
-    --navbar-height:50px
+    --navbar-height:50px;
+    --sidebar-width:300px;
+    --sidebar-width-collpased:80px;
 }
