--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,8 +1,8 @@
 .Button {
     cursor: pointer;
+    color: var(--inverted-primary-color);
 }
 .clear {
-    margin: 0;
     padding: 0;
     border: none;
     background: none;
