--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,19 +1,17 @@
-@import 'reset';
-@import 'variables/global.scss';
-@import 'themes/dark';
-@import 'themes/light';
+@import "reset";
+@import "variables/global";
+@import "themes/dark";
+@import "themes/light";
 
 .app {
-    font:var(--font-m);
-
-    background:var(--bg-color);
-    color:var(--primary-color);
-
+    font: var(--font-m);
+    background: var(--bg-color);
+    color: var(--primary-color);
     min-height: 100vh;
 }
+
 .content-page {
     display: flex;
-
 }
 
 .page-wrapper {
