--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,10 +1,8 @@
 .app.light {
-    --bg-color:rgb(202, 197, 197);
-    --inverted-bg-color:rgb(29, 28, 28);
-
-    --primary-color: rgb(110, 40, 40);
-    --secondary-color: rgb(211, 210, 210);
-
-    --inverted-primary-color: rgb(163, 162, 162);
+    --bg-color: rgb(202 197 197);
+    --inverted-bg-color: rgb(29 28 28);
+    --primary-color: rgb(110 40 40);
+    --secondary-color: rgb(211 210 210);
+    --inverted-primary-color: rgb(163 162 162);
     --inverted-secondary-color: white;
 }
