--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,17 +1,15 @@
 :root {
-    --font-family:Consolas,'Times New Roman',Serif;
+    --font-family: consolas, "Times New Roman", serif;
+    --font-size-m: 16px;
+    --font-line-m: 24px;
+    --font-m: var(--font-size-m)/var(--font-line-m) var(--font-family);
+    --font-size-l: 24px;
+    --font-line-l: 32px;
+    --font-l: var(--font-size-l)/var(--font-line-l) var(--font-family);
 
-    --font-size-m:16px;
-    --font-line-m:24px;
-    --font-m:var(--font-size-m)/var(--font-line-m) var(--font-family);
-    
+    // Размеры
 
-    --font-size-l:24px;
-    --font-line-l:32px;
-    --font-l:var(--font-size-l)/var(--font-line-l) var(--font-family);
-
-    //Размеры
-    --navbar-height:50px;
-    --sidebar-width:300px;
-    --sidebar-width-collpased:80px;
+    --navbar-height: 50px;
+    --sidebar-width: 300px;
+    --sidebar-width-collpased: 80px;
 }
