--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,6 +1,7 @@
 .Button {
     cursor: pointer;
     color: var(--inverted-primary-color);
+    padding: 6px 15px;
 }
 
 .clear {
@@ -11,8 +12,53 @@
 }
 
 .outline {
-    padding: 10px 15px;
     background: none;
     color: var(--primary-color);
     border: 1px solid var(--primary-color);
+}
+
+.background {
+    background: var(--bg-color);
+    color: var(--inverted-primary-color);
+    border: none;
+}
+
+.backgroundInverted {
+    background: var(--inverted-bg-color);
+    color: var(--inverted-primary-color);
+    border: none;
+}
+
+.square {
+    padding: 0;
+}
+
+.square.sizeM {
+    width: var(--font-line-m);
+    height: var(--font-line-m);
+    font: var(--font-m);
+}
+
+.square.sizeL {
+    width: var(--font-line-l);
+    height: var(--font-line-l);
+    font: var(--font-l);
+}
+
+.square.sizeXL {
+    width: var(--font-line-xl);
+    height: var(--font-line-xl);
+    font: var(--font-xl);
+}
+
+.sizeM {
+    font: var(--font-m);
+}
+
+.sizeL {
+    font: var(--font-l);
+}
+
+.sizeXL {
+    font: var(--font-xl);
 }
