--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,4 +1,4 @@
-.app.dark {
+.app_dark_theme {
     --bg-color: rgb(29 28 28);
     --inverted-bg-color: rgb(202 197 197);
     --primary-color: rgb(163 162 162);
