--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,4 +1,4 @@
-.app.light {
+.app_light_theme {
     --bg-color: rgb(202 197 197);
     --inverted-bg-color: rgb(29 28 28);
     --primary-color: rgb(110 40 40);
