--- a/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
+++ b/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
@@ -1,17 +1,26 @@
 .ProfileCard {
     padding: 20px;
     border: 2px solid var(--inverted-bg-color);
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-}
-
-.data {
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .input {
     margin: 10px;
+}
+
+.loading,
+.error {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+
+.avatarWrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.editing {
+    border: 2px solid var(--inverted-primary-color);
 }
