--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -22,6 +22,12 @@
     border: 1px solid var(--primary-color);
 }
 
+.outlineRed {
+    background: none;
+    border: 1px solid var(--red-light);
+    color: var(--red-light);
+}
+
 .background {
     background: var(--bg-color);
     color: var(--inverted-primary-color);
