add articleDetails blocks, add Code component add Icon component, add stories, add entity Article

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,11 @@
     --secondary-color: white;
     --inverted-primary-color: rgb(110 40 40);
     --inverted-secondary-color: rgb(211 210 210);
+
+    // skeleton
+    --skeleton-shadow: rgb(202 197 197);
+    --skeleton-color: white;
+
+    // copy
+    --code-bg: rgb(78 76 76);
 }
