--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -5,4 +5,11 @@
     --secondary-color: rgb(146 66 66);
     --inverted-primary-color: rgb(163 162 162);
     --inverted-secondary-color: white;
+
+    // skeleton
+    --skeleton-shadow: rgb(110 40 40);
+    --skeleton-color: rgb(146 66 66);
+
+    // copy
+    --code-bg: rgb(245 237 237);
 }
