--- a/src/app/styles/themes/green.scss
+++ b/src/app/styles/themes/green.scss
@@ -2,7 +2,14 @@
     --bg-color: #638206;
     --inverted-bg-color: #f6f9eb;
     --primary-color: #f6f9eb;
-    --secondary-color: #386b05;
+    --secondary-color: #b0dd99;
     --inverted-primary-color: #386b05;
     --inverted-secondary-color: #f6f9eb;
+
+    // skeleton
+    --skeleton-shadow: #f6f9eb;
+    --skeleton-color: white;
+
+    // copy
+    --code-bg: #89ad1b;
 }
