add infinite scroll, add Page component, add services for next part articles

--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,5 +1,16 @@
-.ArticleList {
+.BIG_PLATE {
+    .card {
+        margin-bottom: 30px;
+    }
+}
+
+.SMALL_PLATE {
     display: flex;
-    gap: 15px;
     flex-wrap: wrap;
+    gap: 15px;
+
+    .card {
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
 }
