--- a/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage.module.scss
+++ b/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage.module.scss
@@ -1,3 +1,10 @@
 .commentsTitle {
     margin-top: 20px;
 }
+
+.recommendation {
+    margin-top: 20px;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
