--- a/src/shared/ui/ListBox/ListBox.module.scss
+++ b/src/shared/ui/ListBox/ListBox.module.scss
@@ -22,6 +22,22 @@
     opacity: 0.7;
 }
 
-.optionTop {
+.optionTopLeft {
     bottom: 100%;
+    left: 0;
+}
+
+.optionTopRight {
+    bottom: 100%;
+    right: 0;
+}
+
+.optionBottomLeft {
+    top: 100%;
+    right: 0;
+}
+
+.optionBottomRight {
+    top: 100%;
+    left: 0;
 }
