--- a/src/shared/ui/Popups/styles/styles.module.scss
+++ b/src/shared/ui/Popups/styles/styles.module.scss
@@ -1,36 +1,22 @@
-.Dropdown {
+.popup {
     position: relative;
 }
 
-.btn {
-    cursor: pointer;
+.trigger {
     background: none;
     outline: none;
     margin: 0;
     padding: 0;
     border: none;
-}
-
-.menu {
-    background-color: var(--card-bg);
-    position: absolute;
-    z-index: 1000;
-    border-radius: 5px;
-    border: 1px solid var(--inverted-primary-color);
-    flex-direction: column;
-    display: flex;
-}
-
-.item {
-    padding: 10px 15px;
-    width: 100%;
-    border: none;
-    background: none;
     cursor: pointer;
 }
 
 .active {
     background: var(--inverted-primary-color);
+}
+
+.disabled {
+    opacity: 0.7;
 }
 
 .optionTopLeft {
