--- a/src/stories/header.css
+++ b/src/stories/header.css
@@ -1,8 +1,9 @@
+/* stylelint-disable indentation */
 .storybook-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0,1);
   padding: 15px 20px;
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -13,7 +14,7 @@
 }
 
 .storybook-header h1 {
-  display: inline-block;
+    display: inline-block;
   vertical-align: top;
   margin: 6px 0 6px 10px;
   font-weight: 700;
